<resources>
    <string name="app_name">Restaurant Inspections</string>
    <string name="restaurant">restaurant</string>
    <string name="date">Date</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="hazard_level">Hazard Level:</string>
    <string name="violations">Violations</string>
    <string name="critical_issues">critical issues</string>
    <string name="non_critical_issues">non-critical issues</string>
    <string name="restaurantActivity_restaurant">Restaurant</string>
    <string name="restaurantActivity_address">1234 Street City, Province</string>
    <string name="restaurantActivity_gps_coordinates">GPS Coordinates</string>
    <string name="restaurantActivity_inspections">Inspections</string>
    <string name="insItemView_critical_issues"># of Critical Issues:</string>
    <string name="insItemView_non_critical_issues"># of Non Critical Issues:</string>
    <string name="insItemView_displayCrit">TextView</string>
    <string name="insItemView_displayNonCrit">TextView</string>
    <string name="insItemView_inspectiondate">inspectionDate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_stack">MainActivityStack</string>
    <string name="tab_txtMap">Map</string>
    <string name="tab_txtList">List</string>
    <string name="switch_tab">Show Restaurant List View</string>
    <string name="switch_tab_map">Show Map View</string>
    <string name="inspection_setNumCrit">%1$d</string>
    <string name="inspection_setNumNonCrit">%1$d</string>
    <string name="maps_markerSnippet_noInsp">Address: %1$s \nNo Inspection Data.</string>
    <string name="maps_markerSnippet">Address: %1$s \Hazard Level: %2$s</string>
    <string name="maps_infoWin_noInsp">No inspections found.</string>
    <string name="maps_infoWin_hazLev">Hazard Level: %1$s</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="search">Search…</string>

    <string name="days_ago">%1$d days ago\n</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">August</string>
    <string name="sept">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <string name="formatted_date">%1$s %2$d, %3$d</string>

    <string name="issues_restaurant_tab">%1$d issues found\n</string>
    <string name="critical_restaurant_tab">%1$d critical,</string>
    <string name="non_critical_restaurant_tab">%1$d non-critical.</string>

    <string name="briefViol_plans">Plans not in accordance.</string>
    <string name="briefViol_foodPremises">Unapproved food premises.</string>
    <string name="briefViol_invalidPermit">Fail to hold valid permit.</string>
    <string name="briefViol_unpostedPermit">Permit not posted.</string>
    <string name="briefViol_contaminated">Food contaminated..</string>
    <string name="briefViol_unsafeProcess">Unsafe food processes.</string>
    <string name="briefViol_cooling">Food not cooled well.</string>
    <string name="briefViol_heating">Food not cooked or heated enough.</string>
    <string name="briefViol_coldTemp">Cold food stored above 4 \u00b0 c.</string>
    <string name="briefViol_hotTemp">Hot food stored below 60 \u00b0 c.</string>
    <string name="briefViol_unapprovedSource">Foods from unapproved sources.</string>
    <string name="briefViol_foodContamination">Food might get contaminated.</string>
    <string name="briefViol_thawing">Food not thawed correctly.</string>
    <string name="briefViol_frozenTemp">Frozen food stored above -18 \u00b0 c.</string>
    <string name="briefViol_writtenProc">Unacceptable written procedures.</string>
    <string name="briefViol_equipUnsanitized">Unsanitized equipment.</string>
    <string name="briefViol_equipWashing">Equipment not properly washed.</string>
    <string name="briefViol_water">Hot and cold water not adequate.</string>
    <string name="briefViol_pestsFree">Premises not free of pests.</string>
    <string name="briefViol_pestsEntrance">Possible entrance of pests.</string>
    <string name="briefViol_sanitizationPremises">Premises not sanitized.</string>
    <string name="briefViol_equipMaterial">Unsuitable equipment material.</string>
    <string name="briefViol_equipState">Equipment not in good order.</string>
    <string name="briefViol_cleansers">Cleansers stored improperly.</string>
    <string name="briefViol_singleUse">Over-use of single use containers.</string>
    <string name="briefViol_premises">Premises not maintained.</string>
    <string name="briefViol_unnecessaryItems">Unnecessary items stored.</string>
    <string name="briefViol_animals">Live animals on premises.</string>
    <string name="briefViol_sanitationProc">No written sanitation procedures.</string>
    <string name="briefViol_thermometers">Equipment lack thermometers.</string>
    <string name="briefViol_handwashingStations">Handwashing stations not available.</string>
    <string name="briefViol_washHands">Employee doesn\'t wash hands.</string>
    <string name="briefViol_personalHygiene">Employee lack personal hygiene.</string>
    <string name="briefViol_smoking">Smoking in prohibited areas.</string>
    <string name="briefViol_level1">Doesn\'t have Foodsafe Level 1.</string>
    <string name="briefViol_FOODSAFE">No Foodsafe in operator\'s absence.</string>
    <string name="favorite">Favourite</string>

    <string name="searchViewHint_pizza">Pizza</string>
    <string name="searchViewHint_low">Low</string>
    <string name="searchViewHint_num">Less than 10</string>
    <string name="searchViewHint_favourite">All favourites</string>
    <string name="searchViewHint_combined">Favorite, pizza, low, 5 or less</string>

    <string name="search_name">Name</string>
    <string name="search_hazard">Hazard</string>
    <string name="search_viol">Violations</string>
    <string name="search_favorites">Favourites</string>
    <string name="search_combined">Combined</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->
</resources>
